crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__boolean_false.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\"false\")"
---
Joined(NbtBoolean) `false` at 0:0 - 0:5

