crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__boolean_true.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\"true\")"
---
Joined(NbtBoolean) `true` at 0:0 - 0:4

